fixed spacing issue on about us page

--- a/css/aboutus.css
+++ b/css/aboutus.css
@@ -57,6 +57,10 @@ h4{
     width: 50%;
 }
 
+.first-item {
+    
+}
+
 @media only screen and (max-width: 900px) {
     /* .brand-identity-container > div{
         margin-right: 0px;
